# StardewValleyCheat

./: CMakeLists.txt  build.ps1  index.js  package.json  process.txt  processos.txt
include/: abstract_obj.hpp  components.hpp  game.hpp  immortal.hpp  menu.hpp  mm.hpp  net_stamina.hpp  ntinfo.hpp  player_obj.hpp  thread.hpp
src/: application.cpp  dllmain.cpp  game.cpp  menu.cpp  ntinfo.cpp  player_obj.cpp  thread.cpp
src/features/: immortal.cpp
src/objects/: net_stamina.cpp  player_obj.cpp
src/utils/: mm.cpp
